# assistant_bot

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
src/app/: application.py  context.py
src/data/repositories/: address_book_repository.py  notes_repository.py
src/domain/models/: address_book.py  fields.py  note.py  notes_book.py  record.py
src/domain/services/: birthday_service.py  contact_service.py  notes_service.py
src/ui/commands/: base_command.py
src/ui/console/: input_handler.py  printer.py
src/ui/screens/: base_screen.py  birthdays_menu_screen.py  contacts_menu_screen.py  main_menu_screen.py  menu_screen.py  notes_menu_screen.py
src/utils/: decorators.py
tests/services/: test_birthday_service.py  test_contact_service.py  test_notes_service.py
